--- a/Notebook shortcut/Notebook shortcut/Base.lproj/Main.storyboard
+++ b/Notebook shortcut/Notebook shortcut/Base.lproj/Main.storyboard
@@ -8,8 +8,13 @@
         <!--Application-->
         <scene sceneID="JPo-4y-FX3">
             <objects>
-                <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Notebook_Shortcut" customModuleProvider="target">
+                    <connections>
+                        <outlet property="menu" destination="awi-lU-WzT" id="6yD-CO-c3z"/>
+                    </connections>
+                </customObject>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
+                <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                 <menu id="awi-lU-WzT">
                     <items>
                         <menuItem title="Open" id="Chj-9u-aqW">
@@ -26,19 +31,14 @@
                         </menuItem>
                     </items>
                 </menu>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Notebook_shortcut" customModuleProvider="target">
-                    <connections>
-                        <outlet property="menu" destination="awi-lU-WzT" id="6yD-CO-c3z"/>
-                    </connections>
-                </customObject>
                 <application id="hnw-xV-0zn" sceneMemberID="viewController">
                     <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                         <items>
-                            <menuItem title="Notebook shortcut" id="1Xt-HY-uBw">
+                            <menuItem title="Notebook Shortcut" id="1Xt-HY-uBw">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Notebook shortcut" systemMenu="apple" id="uQy-DD-JDr">
+                                <menu key="submenu" title="Notebook Shortcut" systemMenu="apple" id="uQy-DD-JDr">
                                     <items>
-                                        <menuItem title="About Notebook shortcut" id="5kV-Vb-QxS">
+                                        <menuItem title="About Notebook Shortcut" id="5kV-Vb-QxS">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
@@ -52,7 +52,7 @@
                                             <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                                        <menuItem title="Hide Notebook shortcut" keyEquivalent="h" id="Olw-nP-bQN">
+                                        <menuItem title="Hide Notebook Shortcut" keyEquivalent="h" id="Olw-nP-bQN">
                                             <connections>
                                                 <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
                                             </connections>
@@ -70,7 +70,7 @@
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                                        <menuItem title="Quit Notebook shortcut" keyEquivalent="q" id="4sb-4s-VLi">
+                                        <menuItem title="Quit Notebook Shortcut" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
                                             </connections>
@@ -683,7 +683,7 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                                     <items>
-                                        <menuItem title="Notebook shortcut Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                                        <menuItem title="Notebook Shortcut Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                             <connections>
                                                 <action selector="showHelp:" target="Ady-hI-5gd" id="y7X-2Q-9no"/>
                                             </connections>
